--- a/src/global.scss
+++ b/src/global.scss
@@ -6,6 +6,7 @@ $edit: rgba(39, 39, 122, 0.43);
 $delete: rgba(255, 0, 0, 0.26);
 $validate:  rgba(0, 128, 0, 0.65);
 $complementary: #2f2f2f;
+$retro:#b6b8de;
 $mobilebreak:768px;
 $padbreak:1300px;
 
