--- a/src/components/commentList/commentlist.scss
+++ b/src/components/commentList/commentlist.scss
@@ -1,130 +1,124 @@
 @import "../../global";
-.commentListContainer{
-margin:3rem 0;
-  position:relative;
-
-.commentListWrapper{
+.commentListContainer {
+  margin: 3rem 0;
   position: relative;
-  padding: 2rem 5px 0;
-
-  &::before{
-    position:absolute;
-    content:"";
-    top:0;
-    bottom: 0;
-    right: 0;
-    height: 1px;
-    width: 100%;
-    background-color: $tertiary;
-    opacity:0.6;
-  }
-  .commentLogin{
-    color: $retro;
-    text-align: center;
-    cursor: pointer;
-    padding: 10px 5px;
-  font-size: 15px;
-    svg{
-      fill:$retro;
-      height: 23px;
+  .commentListWrapper {
+    position: relative;
+    padding: 2rem 5px 0;
+    &::before {
+      position: absolute;
+      content: "";
+      top: 0;
+      bottom: 0;
+      right: 0;
+      height: 1px;
+      width: 100%;
+      background-color: $tertiary;
+      opacity: 0.6;
     }
-    span{
-      margin-left: 7px;
-    }
-    .commentLoginLink{
-      font-weight: 600;
-      transition: all 0.8s ease-in-out;
-    }
-    &:hover{
-      .commentLoginLink{
-        text-decoration: underline;
-      }
-
-    }
-  }
-  .commentNone{
-    font-weight: 400;
-    font-size: 17px;
-    margin: 1rem;
-    text-align: center;
-  }
-  .commentAddYoursWrapper{
-    display: flex;
-    flex-wrap: wrap;
-    .commentPseudo{
+    .commentLogin {
       color: $retro;
-      font-weight: bold;
-      margin-right: 1rem;
-      word-spacing: 5px;
-      font-size: 14px;
-    }
-    input{
-      outline: none;
-      border: none;
-      border-bottom:1px solid $retro;
-      word-spacing: 5px;
-      padding: 0 5px;
-      min-width:280px;
-      line-height: 1.7rem;
-      font-family: 'Roboto Mono';
-      color: $complementary;
-      &::placeholder {
-        font-family: 'Roboto Mono';
-        font-weight: 400;
-        color: $complementary;
-      }
-    }
-  }
-  .commentList{
-  margin-top: 1rem;
-  .commentWrapper{
-    margin: 3px 0;
-    width: 95%;
-    background:#F5F5F5;
-    border-radius: 10px;
-    padding:1rem;
-    max-width: 95%;
-    .top{
-    display: flex;
-      font-size: 14px;
-      .pseudo{
-        font-weight: 700;
-        margin-right: 15px;
-      }
-      .date{
-        font-weight: 300;
-        color: $tertiary;
-      }
-    }
-    .text{
+      text-align: center;
+      cursor: pointer;
+      padding: 10px 5px;
       font-size: 15px;
+      svg {
+        fill: $retro;
+        height: 23px;
+      }
+      span {
+        margin-left: 7px;
+      }
+      .commentLoginLink {
+        font-weight: 600;
+        transition: all 0.8s ease-in-out;
+      }
+      &:hover {
+        .commentLoginLink {
+          text-decoration: underline;
+        }
+      }
     }
-    .bottom{
-      color: $retro;
+    .commentNone {
+      font-weight: 400;
+      font-size: 17px;
+      margin: 1rem;
+      text-align: center;
+    }
+    .commentAddYoursWrapper {
       display: flex;
-      span{
-        margin-right: 15px;
+      flex-wrap: wrap;
+      justify-content: center;
+      .commentPseudo {
+        color: $retro;
+        font-weight: bold;
+        margin-right: 1rem;
+        word-spacing: 5px;
         font-size: 14px;
-        cursor: pointer;
-        &:hover{
-          font-weight: bold;
+      }
+      input {
+        outline: none;
+        border: none;
+        border-bottom: 1px solid $retro;
+        word-spacing: 5px;
+        padding: 0 5px;
+        min-width: 280px;
+        line-height: 1.7rem;
+        font-family: 'Roboto Mono';
+        color: $complementary;
+        &::placeholder {
+          font-family: 'Roboto Mono';
+          font-weight: 400;
+          color: $complementary;
         }
       }
-      .showReplies{
-        cursor:pointer;
-        font-size: 14px;
-        &:hover{
-          font-weight: bold;
+    }
+    .commentList {
+      margin-top: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      .commentWrapper {
+        margin: 3px 0;
+        width: 95%;
+        background: #F5F5F5;
+        border-radius: 10px;
+        padding: 1rem;
+        max-width: 90%;
+        .top {
+          display: flex;
+          font-size: 14px;
+          .pseudo {
+            font-weight: 700;
+            margin-right: 15px;
+          }
+          .date {
+            font-size: 13px;
+            font-weight: 300;
+            color: $tertiary;
+          }
         }
-        svg{
-          height: 17px;
-          width: 17px;
+        .text {
+          font-size: 14px;
+          line-height: 20px;
+        }
+        .bottom {
+          .actions {
+            color: $retro;
+            display: flex;
+            span {
+              margin-right: 15px;
+              font-size: 13px;
+              cursor: pointer;
+              &:hover {
+                font-weight: bold;
+              }
+            }
+          }
         }
       }
-
     }
   }
-  }
-}
 
 }
