--- a/src/components/repliesList/replieslist.scss
+++ b/src/components/repliesList/replieslist.scss
@@ -1,5 +1,15 @@
 @import "../../global";
 .repliesList{
+  .commentAddYoursWrapper{
+    transition: all 0.2s ease-in-out;
+    height: 0;
+    opacity: 0;
+    overflow-y: hidden;
+    &.expand {
+      height: auto;
+      opacity: 1;
+    }
+  }
 
   .showRepliesBtn {
     cursor: pointer;
