--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -31,17 +31,77 @@
     text-align: center;
     margin-bottom: 1.5rem;
   }
+  .recover__wrapper{
+    background-color:  white;
+    display: flex;
+    padding:1rem;
+    margin: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    border-radius: 10px;
+    box-sizing: border-box;
+    .recover__input-wrapper{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      @include mobile {
+        margin: 0 0.7rem;
+      }
 
-  .login__input-wrapper {
+      .recover__input-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0.5rem 1rem;
+
+        svg {
+          background-color: $complementary;
+          opacity: 0.5;
+          padding: 0.5rem;
+          color: $primary;
+        }
+
+      }
+      .recover__btn-submit {
+        border: 1px solid #2f2f2f;
+        margin: 1rem auto;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+        font-size: 1.2rem;
+        transition: background-color 0.7s ease;
+        min-width: 90px;
+        min-height: 40px;
+
+        &:disabled {
+          cursor: not-allowed;
+        }
+
+        &:hover {
+          background-color: $complementary;
+          color: $primary;
+
+        }
+      }
+
+      .recover__message--error {
+        font-size: 0.9rem;
+        color: $delete;
+
+      }
+    }
+  }
+
+  .login__input-wrapper,  {
     width: min(400px, 85vw);
     //height: min(300px, 90vh);
     padding: 1.5rem 1rem;
     box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
     background: #e6e6e6;
-
     color: #000;
     border-radius: 10px;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
