--- a/src/components/account/accountContent/AccountParams/accountparams.scss
+++ b/src/components/account/accountContent/AccountParams/accountparams.scss
@@ -44,8 +44,11 @@
         @include mobile{
           //overflow: scroll;
           width: 100%;
+          max-width: 250px;
           padding-top: 0.3rem;
-          padding-bottom:0.5rem
+          padding-bottom:0.5rem;
+          margin:1rem auto 1rem 0;
+
         }
       }
       .account-content__buttons{
@@ -56,6 +59,7 @@
           margin-right: auto;
           margin-left: 0;
           padding-top:0.5rem;
+
         }
 
       }
@@ -68,6 +72,8 @@
         transition: all 100ms ease-in-out;
         @include mobile{
           font-size: 0.8rem;
+          padding-bottom:0.5rem;
+          margin:0rem auto 1rem 0;
         }
         .lds-ring{
           transform: none;
