--- a/src/components/autoCSearchBar/autocsearchbar.scss
+++ b/src/components/autoCSearchBar/autocsearchbar.scss
@@ -16,18 +16,21 @@
     display: flex;
     align-items: center;
     padding: 5px;
-    border: 1px solid gray;
-    border-radius: 5px;
+    //border: 1px solid gray;
+    //border-radius: 5px;
+    border: none;
     height: 25px;
     margin: 2px 5px 2px 0px;
     //color: white;
     span{
       position:relative;
-      margin-left: 5px;
+      //margin-left: 10px;
       padding: 5px;
       cursor:pointer;
-      border: 1px solid #838383;
-      border-radius: 50%;
+      //border: 1px solid #838383;
+      //border-radius: 50%;
+      margin-left:2px;
+      border:none;
       //text-align: center;
       height: 10px;
       width: 10px;
