--- a/src/components/menuItem/menuitem.scss
+++ b/src/components/menuItem/menuitem.scss
@@ -181,18 +181,22 @@
           display: flex;
           align-items: center;
           padding: 5px;
-          border: 1px solid gray;
-          border-radius: 5px;
+          //border: 1px solid gray;
+          //border-radius: 5px;
+          border:none;
           height: 25px;
-          margin: 2px 5px 2px 0px;
+          //margin: 2px 5px 2px 0px;
+          margin: 2px 10px 2px 0px;
           span {
             position: relative;
-            margin-left: 5px;
-            padding: 5px;
+            //margin-left: 5px;
+            //padding: 5px;
             cursor: pointer;
-            border: 1px solid #838383;
-            border-radius: 50%;
+            //border: 1px solid #838383;
+            //border-radius: 50%;
             //text-align: center;
+            margin-left: 1px;
+            border: none;
             height: 10px;
             width: 10px;
 
