--- a/src/components/account/accountContent/accountcontent.scss
+++ b/src/components/account/accountContent/accountcontent.scss
@@ -1,30 +1,34 @@
 @import "../../../global";
 
-.account-content__wrapper{
-  width: 100%;margin: 1rem 0;
-  padding:1rem;
+.account-content__wrapper {
+  width: 100%;
+  margin: 1rem 0;
+  padding: 1rem;
   box-sizing: border-box;
-  .mobileView{
-    display:none;
-    @include mobile{
+
+  .mobileView {
+    display: none;
+    @include mobile {
       display: flex;
       cursor: pointer;
 
     }
   }
-  @include mobile{
+
+  @include mobile {
     padding: 1rem 0.1rem;
-    .account-content__account-params-wrapper,.account-content__brands-wrapper{
-      padding:0 1rem;
+    .account-content__account-params-wrapper, .account-content__brands-wrapper {
+      padding: 0 1rem;
     }
   }
   //.account-content__message{
   //  background-color: $validate;
   //}
-  .account__input-container{
-    margin-top:1rem;
+  .account__input-container {
+    margin-top: 1rem;
   }
-  .account__message--delete{
+
+  .account__message--delete {
     position: absolute;
     top: 50%;
     right: 50%;
@@ -32,57 +36,65 @@
     height: 10rem;
     width: 15rem;
     border: 1px solid #ff000036;
-    transform: translate(50%,-50%);
+    transform: translate(50%, -50%);
     border-radius: 20px;
     box-shadow: $box-shadow;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     z-index: 1;
-    .account__message-delete-text{
+
+    .account__message-delete-text {
       padding: 0.5rem;
       font-size: 0.9rem;
     }
-    .account__message-delete-btn{
+
+    .account__message-delete-btn {
       display: flex;
       align-items: center;
       width: 100%;
       justify-content: space-around;
-      button{
+
+      button {
         background-color: $primary;
         padding: 0.7rem;
         border-radius: 20px;
         width: 5rem;
-        cursor:pointer;
+        cursor: pointer;
         text-transform: uppercase;
         transition: all 0.5s ease-in-out;
-        &:hover{
+
+        &:hover {
           background-color: #bbbbbb;
           font-weight: bold;
-          color:$primary
+          color: $primary
         }
       }
-      button:first-child{
-        border:1px solid $delete;
+
+      button:first-child {
+        border: 1px solid $delete;
 
       }
-      button:last-child{
-        border:1px solid $validate
+
+      button:last-child {
+        border: 1px solid $validate
       }
     }
   }
-  .account__btn-submit{
-    border:1px solid $validate;
+
+  .account__btn-submit {
+    border: 1px solid $validate;
     color: $validate;
     width: 8rem;
     text-transform: uppercase;
     //font-weight:bold;
-    cursor:pointer;
-    margin-top:2rem;
+    cursor: pointer;
+    margin-top: 2rem;
     transition: all 100ms ease-in-out;
     font-size: 1rem;
     letter-spacing: 2px;
-    &:hover{
+
+    &:hover {
       background-color: $tertiary;
       font-weight: bold;
       background-color: #bbbbbb;
@@ -90,16 +102,18 @@
     }
 
   }
-  .account__form-message{
+
+  .account__form-message {
     margin-bottom: 1rem;
     color: $delete;
     font-weight: bold;
     //text-decoration: underline;
-    &.validate{
-      color:$validate;
+    &.validate {
+      color: $validate;
     }
   }
-  .account__message{
+
+  .account__message {
     position: absolute;
     top: 36px;
     color: $primary;
@@ -111,101 +125,124 @@
     opacity: 1;
     transform: translateX(50%);
     z-index: 10;
-    opacity:1;
-
+    opacity: 1;
+    @include mobile {
+      margin: auto;
+      width: 15.5rem;
+      transform: translateX(calc(45% - (15.5rem / 3)));
+      transform-origin: center;
+    }
   }
-  h2{
+
+  h2 {
     margin-top: 2rem;
   }
 
 
+  width: 100%;
+
+  .account-content__info-line {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
     width: 100%;
-    .account-content__info-line{
-      box-sizing: border-box;
+    margin: 1rem 0;
+    @include mobile {
+      flex-direction: column;
+    }
+
+    &.bordered {
+      border-bottom: 1px solid $tertiary;
+      margin: 0.5rem 0;
+      padding: 0.5rem;
+
+    }
+
+    &.bordered:first-child {
+      border-top: 1px solid $tertiary;
+    }
+
+    .account-content__label {
+      flex-basis: 1/3;
+      width: 33%;
+      margin-right: 1rem;
       display: flex;
-align-items: center;
-      width: 100%;
-      margin: 1rem 0;
-      @include mobile{
-        flex-direction: column;
+      align-items: center;
+
+      @include mobile {
+        //overflow: scroll;
+        width: 100%;
       }
 
-      &.bordered{
-        border-bottom:1px solid $tertiary;
-        margin: 0.5rem 0;
-        padding: 0.5rem;
+      svg {
+        margin-right: 0.5rem;
+      }
 
+    }
+
+    .account-content__value {
+      flex-basis: 1/3;
+      width: 33%;
+      font-weight: 200;
+
+      @include mobile {
+        //overflow: scroll;
+        width: 100%;
+        padding-top: 0.3rem;
+        padding-bottom: 0.5rem
       }
-      &.bordered:first-child{
-        border-top:1px solid $tertiary;
+    }
+
+    .account-content__buttons {
+      margin-left: auto;
+      flex-basis: fit-content;
+      display: flex;
+      @include mobile {
+        margin-right: auto;
+        margin-left: 0;
+        padding-top: 0.5rem;
       }
-      .account-content__label{
-        flex-basis: 1/3;
-        width: 33%;
+
+      .btn {
+
         margin-right: 1rem;
-        display: flex;
-        align-items: center;
-
-        @include mobile{
-          //overflow: scroll;
-          width: 100%;
-        }        svg{
-          margin-right: 0.5rem;
+        padding: 0.5rem;
+        cursor: pointer;
+        transition: all 100ms ease-in-out;
+        @include mobile {
+          font-size: 0.8rem;
         }
 
-      }
-      .account-content__value{
-        flex-basis: 1/3;
-        width: 33%;
-        font-weight: 200;
-
-        @include mobile{
-          //overflow: scroll;
-          width: 100%;
-          padding-top: 0.3rem;
-          padding-bottom:0.5rem
-        }
-      }
-      .account-content__buttons{
-        margin-left:auto;
-        flex-basis: fit-content;
-        display: flex;
-        @include mobile{
-          margin-right: auto;
-          margin-left: 0;
-          padding-top:0.5rem;
-        }
-        .btn{
-
-          margin-right: 1rem;
-          padding:0.5rem;
-          cursor:pointer;
-          transition: all 100ms ease-in-out;
-          @include mobile{
-            font-size: 0.8rem;
-          }
-          &.account-content__buttons-btn-create{
-            color:$validate;
-            border:1px solid $validate;
-          }
-          &.account-content__buttons-btn-edit{
-            color:$edit;
-            border:1px solid $edit;
-          }
-          &.account-content__buttons-btn-delete{
-            color:$delete;
-            border:1px solid $delete;
-          }
-          &:hover{
-            font-weight: bold;
-            background-color: $shadow;
-            color: $primary;
-          }
+        &.account-content__buttons-btn-create {
+          color: $validate;
+          border: 1px solid $validate;
         }
 
+        &.account-content__buttons-btn-edit {
+          color: $edit;
+          border: 1px solid $edit;
+        }
 
+        &.account-content__buttons-btn-delete {
+          color: $delete;
+          border: 1px solid $delete;
+        }
+
+        &:hover {
+          font-weight: bold;
+          background-color: $shadow;
+          color: $primary;
+        }
       }
 
 
+    }
+
+
+  }
+
+  .account-content__brands-wrapper {
+    width: 100%;
+    position: relative;
   }
 }
