--- a/src/components/account/accountContent/Post/post.scss
+++ b/src/components/account/accountContent/Post/post.scss
@@ -37,7 +37,6 @@
       resize: none;
     }
   }
-
 }
 
 .account-content__postProfileImg {
@@ -91,7 +90,7 @@
   //align-items: center;
   margin-right: 0;
   cursor: pointer;
-  margin-top:0.4rem;
+  margin-top:10px;
   flex-wrap: wrap;
   .account-content__postOption-label-wrapper{
     display: flex;
@@ -154,7 +153,7 @@ width:7rem;
 }
 
 .account-content__postImgContainer{
-  padding: 20px 10px ;
+  padding: 10px 10px 20px;
   position: relative;
   @include mobile{
 
@@ -169,7 +168,7 @@ width:7rem;
 
 .account-content__postCancelImg{
   position: absolute;
-  top: 0;
+  top: 17px;
   right: 20px;
   cursor: pointer;
   opacity: 0.7;
@@ -232,13 +231,15 @@ width: 100%;
         height: unset;
       }
       .account-content__buttons{
-        height: 50px;
+        height: 0;
         display: flex;
         justify-content: center;
         opacity: 0;
         align-items: center;
+        transition: height 0.2s ease-in-out;
         &.visible{
           opacity: 1;
+          height: 50px;
           .btn{
             margin-right: 1rem;
 
