--- a/src/components/account/accountContent/Post/post.scss
+++ b/src/components/account/accountContent/Post/post.scss
@@ -178,7 +178,7 @@ width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center; align-items: center;
-  margin-top:2rem;
+  margin-top:1rem;
   .account-content__post-container{
     box-sizing: border-box;
     -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
@@ -210,11 +210,7 @@ width: 100%;
           color: $primary;
         }
       }
-
-
-
     }
-
     .account-content__content-input{
       display: flex;
       flex-direction: column;
@@ -316,4 +312,11 @@ width: 100%;
       }
     }
   }
+}
+.account-content__subTitle{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
 }
