--- a/src/components/account/accountContent/AccountParams/accountparams.scss
+++ b/src/components/account/accountContent/AccountParams/accountparams.scss
@@ -84,7 +84,7 @@ h2{
       .btn{
         margin: 0 0 0 1rem;
         font-size: 13px;
-        width: 6rem;
+        //width: 6rem;
         padding:5px;
         cursor:pointer;
         transition: all 100ms ease-in-out;
