--- a/src/components/account/accountContent/accountcontent.scss
+++ b/src/components/account/accountContent/accountcontent.scss
@@ -27,7 +27,9 @@
   .account__input-container {
     margin-top: 1rem;
   }
-
+   .account-content__new-post-title{
+    text-align: center;
+  }
   .account__message--delete {
     position: absolute;
     top: 50%;
