--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,6 +1,6 @@
 @import "../../global.scss";
 .topbar{
-  background-color: $primary ;
+  //background-color: $primary ;
   height: 40px;
   width: 100%;
   color: $secondary;
